Bug 388101 - "cgicon.knsrc: all categories are missing" error message not very useful
Summary: "cgicon.knsrc: all categories are missing" error message not very useful
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.11.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-12-21 00:51 UTC by Nate Graham
Modified: 2018-02-23 16:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2017-12-21 00:51:35 UTC
Multiple users (myself included) have reported that Discover shows a notification message on launch with the text "cgicon.knsrc: all categories are missing".

This message isn't very useful because:
- It's written in technical jargon that only has meaning if you're a KDE developer (not exactly Discover's target audience :-) )
- It doesn't give any indication or suggestion for how the user might fix the problem or even what might be causing it
- It disappears after 2 seconds due to Bug 388087 and Bug 388099, so it's hard to even read the text
Comment 1 Aleix Pol 2017-12-21 01:02:22 UTC
Would "Failed to fetch Wallpapers" be any better?
Comment 2 Nate Graham 2017-12-21 02:48:34 UTC
That would be less jargonistic, which is better. Here's an additional idea: maybe instead of being a message on launch, we could only show the error message when the user tries to browse for wallpapers, shown instead of the missing content.
Comment 3 Aleix Pol 2017-12-28 19:45:09 UTC
Git commit 8519fd22a7ecc2e60460ec7f41be5a3d6e2a30bc by Aleix Pol.
Committed on 28/12/2017 at 19:41.
Pushed by apol into branch 'master'.

Improve KNS error message

M  +8    -6    libdiscover/backends/KNSBackend/KNSBackend.cpp
M  +1    -0    libdiscover/backends/KNSBackend/KNSBackend.h

https://commits.kde.org/discover/8519fd22a7ecc2e60460ec7f41be5a3d6e2a30bc
Comment 4 Nate Graham 2018-02-23 16:31:53 UTC
Hmm. the message still isn't actually useful or actionable for a user. See Bug 390922. Users still don't know what to do here. Let's consider just suppressing these messages: Bug 390959