Improve KNS error message

BUG: 388101